<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Cloud Gallery</string>

    <string name="forgotPassword_infoBox">If you forgot your password, we can send you a link to create a new password and get back into your account</string>
    <string name="login_title">LogIn</string>
    <string name="register_title">Register</string>
    <string name="forgot_password_title">Forgot password?</string>
    <string name="email_address_editText">Email Address</string>
    <string name="submit">Submit</string>
    <string name="password_editText">Password</string>
    <string name="signin">Sign In</string>
    <string name="user_name_editText">User Name</string>
    <string name="signup">Sign Up</string>
    <string name="empty_username">User Name shouldn\'t be empty</string>
    <string name="empty_email">Email Address shouldn\'t be empty</string>
    <string name="invaild_email">Invalid email. Please enter valid email.</string>
    <string name="invaild_password">
                  # Must have at least 6 characters\n
                  # Must have a digit.\n
                  # Lower case letter must occur at least once.\n
                  # An upper case letter must occur at least once.\n
                  # A special character must occur at least once.\n
                  # No whitespace.\n
    </string>
    <string name="empty_password">Password shouldn\'t be empty</string>
    <string name="forgotPassword_progressBar">Checking information...</string>
    <string name="error_verification_mail">Failed to send verification email.</string>
    <string name="success_verification_mail">\"Verification email sent to \"</string>
    <string name="progress_registration">Registering User...</string>
    <string name="user_email_failure">UserWithEmail:failure</string>
    <string name="user_email_success">signInWithEmail:success</string>
    <string name="progress_login">Logging In...</string>
    <string name="home">CATEGORY</string>
    <string name="timeline">TIMELINE</string>
    <string name="profile">PROFILE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_details">Edit details</string>
    <string name="user_details">User details</string>
    <string name="logout">LogOut</string>
    <string name="address">Address</string>
    <string name="postal_address">Postal Address</string>
    <string name="dob">02 Oct, 1990</string>
    <string name="birthday">Birthday</string>
    <string name="phone_prefix">+91 -</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Additional Email Id</string>
    <string name="logout_message">LogOut Successfully</string>
    <string name="permission_denied">Permission Denied. Please go to settings and enable required permissions.</string>
    <string name="permission_denied_short_message">Permission Denied</string>
    <string name="delete">Delete</string>
    <string name="add_category">Add Category</string>
    <string name="category_name">Category Name</string>
    <string name="default_category_link" tools:ignore="TypographyDashes"><![CDATA[https://firebasestorage.googleapis.com/v0/b/cloud-gallery-minor-project.appspot.com/o/Admin%2Ficon.png?alt=media&token=f966a01b-739e-44e3-89e8-897e662a39a0]]></string>
    <string name="empty_list_category">Empty list! Please category by clicking on the button below</string>
    <string name="or">OR</string>
    <string name="register_message"><![CDATA[Swipe Left To LogIn \n&\nRight To Forget Password]]></string>
    <string name="login_message">Swipe Right To Register</string>
    <string name="forgot_password_message">Swipe Left To Register</string>

</resources>
