<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/timeline"
        android:enabled="true"
        android:icon="@drawable/timeline"
        android:title="@string/timeline"
        app:cnb_backgroundColor="@color/colorPrimary"
        app:cnb_iconColor="@color/white"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/white" />

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:cnb_backgroundColor="@color/colorPrimary"
        app:cnb_iconColor="@color/white"
        app:cnb_textColor="@color/white" />

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/profile"
        android:title="@string/profile"
        app:cnb_backgroundColor="@color/colorPrimary"
        app:cnb_iconColor="@color/white"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/white" />


</menu>