<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.auth.LoginScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">


        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:fontFamily="@font/abril_fatface"
            android:letterSpacing="0.08"
            android:padding="10dp"
            android:text="@string/login_title"
            android:textColor="@color/textColor_highlighted"
            android:textSize="20sp"
            tools:targetApi="lollipop" />

        <ImageView
            android:id="@+id/pointer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_title"
            android:layout_alignStart="@+id/login_title"
            android:layout_alignEnd="@id/login_title"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/textpointer" />

        <TextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/login_title"
            android:fontFamily="@font/abril_fatface"
            android:letterSpacing="0.08"
            android:padding="10dp"
            android:text="@string/register_title"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/forgotPassword_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/abril_fatface"
            android:letterSpacing="0.08"
            android:padding="10dp"
            android:text="@string/forgot_password_title"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            tools:targetApi="lollipop" />


        <EditText
            android:id="@+id/email_EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pointer"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittext_background"
            android:fontFamily="@font/abril_fatface"
            android:hint="@string/email_address_editText"
            android:inputType="textEmailAddress"
            android:letterSpacing="0.1"
            android:padding="10dp"
            android:shadowColor="@color/textColor_highlighted"
            android:textColor="@color/textColor_highlighted"
            android:textColorHint="@color/textColor"
            tools:targetApi="lollipop" />

        <EditText
            android:id="@+id/password_EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_EditText"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittext_background"
            android:fontFamily="@font/abril_fatface"
            android:hint="@string/password_editText"
            android:inputType="textPassword"
            android:letterSpacing="0.1"
            android:padding="10dp"
            android:textColor="@color/textColor_highlighted"
            android:textColorHint="@color/textColor"
            tools:targetApi="lollipop" />


        <Button
            android:id="@+id/login_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_EditText"
            android:background="@drawable/button_background"
            android:fontFamily="@font/abril_fatface"
            android:letterSpacing="0.1"
            android:padding="10dp"
            android:text="@string/signin"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp"
            tools:targetApi="lollipop" />

    </RelativeLayout>

</FrameLayout>