<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="com.minorProject.cloudGallery.views.fragments.auth.ForgotPasswordFragment" />

        <variable
            name="viewModel"
            type="com.minorProject.cloudGallery.viewModels.AuthViewModel" />

        <variable
            name="binder"
            type="com.minorProject.cloudGallery.model.bindingClass.ForgotPasswordBinderClass" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        tools:context=".views.fragments.auth.LoginScreenFragment">


        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:fontFamily="@font/allerta"
            android:letterSpacing="0.08"
            android:padding="10dp"
            android:text="@string/login_title"
            android:textColor="@color/textColor_highlighted"
            android:textSize="18sp"
            tools:targetApi="lollipop" />

        <ImageView
            android:id="@+id/pointer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_title"
            android:layout_alignStart="@+id/forgotPassword_title"
            android:layout_alignEnd="@id/forgotPassword_title"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/textpointer"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/login_title"
            android:fontFamily="@font/allerta"
            android:letterSpacing="0.08"
            android:padding="10dp"
            android:text="@string/register_title"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/forgotPassword_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/allerta"
            android:letterSpacing="0.08"
            android:padding="10dp"
            android:text="@string/forgot_password_title"
            android:textAlignment="textEnd"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            tools:targetApi="lollipop"
            tools:ignore="RelativeOverlap" />


        <androidx.cardview.widget.CardView
            android:id="@+id/form_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pointer"
            android:layout_margin="10dp"
            android:layout_marginTop="@dimen/loginViewsMargin"
            app:cardCornerRadius="20dp"
            app:cardElevation="50dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputEmail"
                    style="@style/parent"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/email_EditText_forgot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/pointer"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/edittext_background"
                        android:drawableStart="@android:drawable/sym_action_email"
                        android:drawablePadding="20dp"
                        android:drawableTint="@color/colorAccent"
                        android:fontFamily="@font/allerta_stencil"
                        android:hint="@string/email_address_editText"
                        android:inputType="textEmailAddress"
                        android:letterSpacing="0.1"
                        android:padding="10dp"
                        android:shadowColor="@color/textColor_highlighted"
                        android:text="@={binder.userEmail}"
                        android:textColor="@color/textColor_highlighted"
                        android:textColorHint="@color/hintColor"
                        tools:targetApi="lollipop"
                        android:importantForAutofill="no" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/infoBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/forgotpassword_infobox"
                    android:fontFamily="@font/allerta_stencil"
                    android:letterSpacing="0.1"
                    android:padding="10dp"
                    android:shadowColor="@color/textColor_highlighted"
                    android:text="@string/forgotPassword_infoBox"
                    android:textColor="@color/white"
                    tools:targetApi="lollipop" />

                <ProgressBar
                    android:id="@+id/progressbar_forget_pass"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/white"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/colorAccent"
                    android:max="100"
                    android:visibility="gone" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/form_layout"
            android:layout_centerInParent="true"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="80dp"
                android:layout_height="5dp"
                android:layout_marginTop="25dp"
                android:src="@color/textColor"
                app:layout_constraintEnd_toStartOf="@+id/textView4"
                app:layout_constraintHorizontal_bias="0.52"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/allerta"
                android:text="@string/or"
                android:textSize="30sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toStartOf="@+id/imageView3"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="80dp"
                android:layout_height="5dp"
                android:layout_marginTop="25dp"
                android:src="@color/textColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/allerta_stencil"
                android:text="@string/forgot_password_message"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toStartOf="@+id/imageView3"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/trapezium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="400dp"
                android:scaleType="fitXY"
                android:src="@drawable/auth_background"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/allerta"
                android:letterSpacing="0.1"
                android:onClick="@{()-> binder.onForgetPassword(viewModel,fragment.view)}"
                android:padding="15dp"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="30sp"
                tools:targetApi="lollipop" />

        </FrameLayout>

    </RelativeLayout>
</layout>